--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,7 @@
     <string name="title">Headunit Revived</string>
     <string name="remove">Remove</string>
     <string name="usb">Usb</string>
+    <string name="wifi">WiFi</string>
     <string name="mic_sample_rate">"Mic sample rate: %dkHz"</string>
     <string name="keymap">Keymap</string>
     <string name="night_mode">Night mode: %s</string>
