more changes to layout and UX

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,6 +35,7 @@
     <string name="no_android_auto_device_connected">No Android Auto Device connected. Please check USB connection.</string>
     <string name="no_usb_device_connected">No USB device connected to device.</string>
     <string name="press_back_again_to_exit">Press back again to exit</string>
+    <string name="back">Back</string>
     <string name="debug_mode">Debug Mode: %s</string>
 </resources>
 
