changing label if projection is active

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
     <string name="exit">Exit</string>
     <string name="video">Android Auto</string>
     <string name="self_mode">Self Mode</string>
+    <string name="to_android_auto">To Android Auto</string>
     <string name="title">Headunit Revived</string>
     <string name="remove">Remove</string>
     <string name="usb">USB</string>
