--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -88,6 +88,10 @@ INHALT</string>
 
     <!-- Categories for SettingsFragment -->
     <string name="category_general">Allgemein</string>
+    <string name="auto_start_self_mode">Auto-Start Self-Mode</string>
+    <string name="auto_start_self_mode_description">Startet den Self-Mode automatisch beim Öffnen der App.</string>
+    <string name="right_hand_drive">Rechtslenker</string>
+    <string name="right_hand_drive_description">Benutzeroberfläche für Rechtsverkehr ausrichten</string>
     <string name="category_graphic">Grafik</string>
     <string name="category_debug">Debug</string>
 
@@ -95,10 +99,10 @@ INHALT</string>
     <string name="category_video">Video</string>
     <string name="force_software_decoding">Software-Decoding erzwingen</string>
     <string name="force_software_decoding_description">Kann Probleme auf manchen Geräten beheben, verbraucht aber mehr Leistung.</string>
-    <string name="force_legacy_decoder">Synchrones Decoding erzwingen</string>
-    <string name="force_legacy_decoder_description">Legacy-Decoding nutzen. Hilft, wenn Video einfriert oder stottert.</string>
     <string name="wifi_launcher_mode">Wireless Headunit Server</string>
     <string name="wifi_launcher_mode_description">Erlaubt dem Handy sich zu verbinden (erfordert Wireless Launcher App auf dem Handy)</string>
+    <string name="auto_connect_last_session">Autom. Verbindung zur letzten Sitzung</string>
+    <string name="auto_connect_last_session_description">Verbindet beim Start automatisch mit dem zuletzt genutzten Gerät</string>
     <string name="video_codec">Video Codec</string>
     <string name="fps_limit">FPS Limit</string>
     <string name="save">Speichern</string>
