--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -99,6 +99,8 @@
     <string name="enter_threshold_value">Voer drempelwaarde in</string>
     <string name="threshold_lux_desc">Lux waarde (0-10000). Hieronder = Nacht.</string>
     <string name="threshold_brightness_desc">Helderheidswaarde (0-255). Hieronder = Nacht.</string>
+    <string name="night_mode_start">Starttijd nachtmodus</string>
+    <string name="night_mode_end">Eindtijd nachtmodus</string>
 
     <!-- Categories for SettingsFragment -->
     <string name="category_general">Algemeen</string>
