--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,6 +24,8 @@
     <string name="enter_threshold_value">Enter Threshold Value</string>
     <string name="threshold_lux_desc">Lux value (0-10000). Below this = Night.</string>
     <string name="threshold_brightness_desc">Brightness value (0-255). Below this = Night.</string>
+    <string name="night_mode_start">Night Mode Start Time</string>
+    <string name="night_mode_end">Night Mode End Time</string>
     <string name="bluetooth_address_s">Bluetooth address</string>
     <string name="enter_bluetooth_mac">Enter bluetooth MAC</string>
     <string name="reset">Reset</string>
