Fix hardcoded 'Android Auto is starting...' string
- Add android_auto_starting string resource
- Update activity_headunit.xml to use string resource
- Add Spanish translation

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -192,6 +192,7 @@
     <string name="success">Éxito</string>
     <string name="failed">Error</string>
     <string name="failed_start_android_auto">Error al iniciar Android Auto</string>
+    <string name="android_auto_starting">Android Auto está iniciando…</string>
 
     <!-- Safety Disclaimer -->
     <string name="disclaimer_title">Seguridad &amp; Responsabilidad</string>
